fixed ul z-index bug

--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -4,7 +4,7 @@
     margin: 0;
 }
 
-div{
+div, form{
     z-index: 5;
 }
 
